IMP: (10/30/10, DN) distro is created only when profile -Pdistor is activated .    The electric launcher trunk/electric/electric-core/target/electric-core-SNAPSHOT.jar    loads other components from local maven repository.
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@12393 b64ed6c1-75a8-e629-b1da-d0dae74a743a